manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "k8-2e3c"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "k8-2e3c"
  template:
    metadata:
      labels:
        app: "k8-2e3c"
    spec:
      containers:
        - name: "k8-2e3c"
          image: "docker4k8.azurecr.io/k8"
          ports:
          - containerPort: 80
